# fastqueeze

./: README.md  SeqArc  SeqArc-1.5  SeqArc-1.6
src/: CMakeLists.txt  SeqRead.hpp  SeqUtil.hpp  alignInfoDivide.cpp  align_proc.cpp  align_proc.h  base_model.h  base_model2.h  clr.cdr  clrf256.cdr  encode.cpp  fastqueeze.cpp  fastqueeze.h  fqzcomp.cpp  fqzcomp.h  kseq.hpp  libzpaq.h  load_ref.cpp  load_ref.h  main.cpp  ref2seq.h  simple_model.h
src/bwa/: bntseq.c  bwa.h  bwamem.h  bwamem_extra.c  bwt.c  bwtindex.c
src/fastmap/: CMakeLists.txt  encode.cpp  encode.h  fastsam.c  fastseq.cpp  kseq.hpp  main.cpp
src/test/: test.fqz  test1.fastq  test2.fastq
test/: ERR2755197_test_1.fq  ERR2755197_test_2.fq
